# depthpack

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  publish.yaml
examples/: gen_golden.rs  roundtrip.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
src/: lib.rs
tests/: golden.rs  robustness.rs  roundtrip.rs
